Avoid overflow in program table

--- a/_css/theme.scss
+++ b/_css/theme.scss
@@ -20,16 +20,19 @@
 
     width: 4rem;
     min-width: 4rem;
+    max-width: 4rem;
   }
 
   .program-talk {
     width: 15rem;
     min-width: 15rem;
+    max-width: 15rem;
   }
 
   .program-space {
     width: 1rem;
     min-width: 1rem;
+    max-width: 1rem;
   }
 }
 
